2009-05-21  Karl Runge <runge@karlrunge.com>
	* configure.ac: check for __thread.
	* libvncserver/main.c, libvncserver/rfbserver.c: various
	  thread safe corrections including sendMutex guard.
	* libvncserver/zrle.c, libvncserver/zrleencodetemplate.c:
	  thread safety via per-client buffers.
	* libvncserver/tight.c, libvncserver/zlib.c: thread safety
	  corrections via thread local storage using __thread.
	* rfb/rfb.h: new members for threaded usage.
	* tightvnc-filetransfer/rfbtightserver.c: fix (currently disabled)
	  for tight security type for RFB 3.8 (debian bug 517422.)
	  NEEDS AUDIT.

2009-03-12  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: support mouse wheel operations

2009-03-08  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: support clipboard operations

2009-03-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: force releasing Alt keys whenr
	  losing focus.  This helps when you switch windows by pressing
	  Alt+Tab (SDLvncviewer would get the "Alt down" event, but not
	  the "Alt up" one).

2009-03-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: make the viewer resizable

2009-03-06  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: enable key repeat

2009-02-03  Mike Frysinger <vapier@gentoo.org>
	* autogen.sh, configure.ac, **/Makefile.am: major automake cleanups

2009-01-04  Karl Runge <runge@karlrunge.com>
	* configure.ac, CMakeLists.txt: set LibVNCServer version to 0.9.7

2009-01-04  Karl Runge <runge@karlrunge.com>
	* prepare_x11vnc_dist.sh: fix SUBDIRS and DIST_SUBDIRS when using
	  --with-system-libvncserver

2008-06-03  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: fix update after resize

2008-02-18  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* libvncserver/rfbregion.c: please MS Visual C++
